# MemoryAllocator

./: .gitignore  Allocator.cpp  Allocator.hpp  AllocatorRunner  AllocatorRunner.cpp  CMakeLists.txt  CMakePresets.json  Chunk.hpp  README.md  TestApp  TestApp.cpp  allocatortest  allocatortest.cpp  basic_string.tcc.gcov  c++config.h.gcov  coverage.cleaned.info  gtest-internal.h.gcov  gtest-message.h.gcov  gtest-port.h.gcov  gtest-printers.h.gcov  gtest.h.gcov  mingw-toolchain.cmake  move.h.gcov  new_allocator.h.gcov
.github/workflows/: MainBuild.yaml  TestAction.yaml  travis.yaml
MemoryAllocator/: CMakeLists.txt  CMakeLists_BACKUP_20869.txt  CMakeLists_BASE_20869.txt  Makefile
MemoryAllocator/benchmarks/: allocatorBenchmark.cpp
MemoryAllocator/examples/: AllocatorRunner.cpp
MemoryAllocator/include/: Allocator.hpp  Allocator.tpp  Chunk.hpp  STL_Allocator.hpp
MemoryAllocator/include/STL_Allocator/: Allocator.hpp  Chunk.hpp  STL_Allocator.hpp
MemoryAllocator/src/: Allocator.cpp
MemoryAllocator/tests/: STLallocatortest.cpp  allocatortest.cpp
coverage_html/: cmd_line  index-sort-f.html  index-sort-l.html  index.html
coverage_html/home/ellie/MemoryAllocator/include/: Allocator.hpp.func-c.html  Allocator.hpp.func.html  Allocator.hpp.gcov.html  Chunk.hpp.func-c.html  Chunk.hpp.func.html  Chunk.hpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage_html/home/ellie/MemoryAllocator/src/: Allocator.cpp.func-c.html  Allocator.cpp.func.html  Allocator.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage_html/home/ellie/MemoryAllocator/tests/: allocatortest.cpp.func-c.html  allocatortest.cpp.func.html  allocatortest.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage_html/include/: Allocator.hpp.func-c.html  Allocator.hpp.func.html  Allocator.hpp.gcov.html  Chunk.hpp.func-c.html  Chunk.hpp.func.html  Chunk.hpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage_html/include/gtest/: gtest-assertion-result.h.func-c.html  gtest-assertion-result.h.func.html  gtest-assertion-result.h.gcov.html  gtest-matchers.h.func-c.html  gtest-matchers.h.func.html  gtest-matchers.h.gcov.html  gtest-message.h.func-c.html  gtest-message.h.func.html  gtest-message.h.gcov.html  gtest-printers.h.func-c.html  gtest-printers.h.func.html  gtest-printers.h.gcov.html  gtest-test-part.h.func-c.html  gtest-test-part.h.func.html  gtest-test-part.h.gcov.html  gtest.h.func-c.html  gtest.h.func.html  gtest.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage_html/include/gtest/internal/: gtest-death-test-internal.h.func-c.html  gtest-death-test-internal.h.func.html  gtest-death-test-internal.h.gcov.html  gtest-filepath.h.func-c.html  gtest-filepath.h.func.html  gtest-filepath.h.gcov.html  gtest-internal.h.func-c.html  gtest-internal.h.func.html  gtest-internal.h.gcov.html  gtest-param-util.h.func-c.html  gtest-param-util.h.func.html  gtest-param-util.h.gcov.html  gtest-port.h.func-c.html  gtest-port.h.func.html  gtest-port.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage_html/src/: Allocator.cpp.func-c.html  Allocator.cpp.func.html  Allocator.cpp.gcov.html  gtest-assertion-result.cc.func-c.html  gtest-assertion-result.cc.func.html  gtest-assertion-result.cc.gcov.html  gtest-death-test.cc.func-c.html  gtest-death-test.cc.func.html  gtest-death-test.cc.gcov.html  gtest-filepath.cc.func-c.html  gtest-filepath.cc.func.html  gtest-filepath.cc.gcov.html  gtest-internal-inl.h.func-c.html  gtest-internal-inl.h.func.html  gtest-internal-inl.h.gcov.html  gtest-matchers.cc.func-c.html  gtest-matchers.cc.func.html  gtest-matchers.cc.gcov.html  gtest-port.cc.func-c.html  gtest-port.cc.func.html  gtest-port.cc.gcov.html  gtest-printers.cc.func-c.html  gtest-printers.cc.func.html  gtest-printers.cc.gcov.html  gtest-test-part.cc.func-c.html  gtest-test-part.cc.func.html  gtest-test-part.cc.gcov.html  gtest-typed-test.cc.func-c.html  gtest-typed-test.cc.func.html  gtest-typed-test.cc.gcov.html  gtest.cc.func-c.html  gtest.cc.func.html  gtest.cc.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage_html/tests/: allocatortest.cpp.func-c.html  allocatortest.cpp.func.html  allocatortest.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage_html/usr/include/c++/13/: atomic.func-c.html  atomic.func.html  atomic.gcov.html  cmath.func-c.html  cmath.func.html  cmath.gcov.html  index-sort-f.html  index-sort-l.html  index.html  initializer_list.func-c.html  initializer_list.func.html  initializer_list.gcov.html  iomanip.func-c.html  iomanip.func.html  iomanip.gcov.html  limits.func-c.html  limits.func.html  limits.gcov.html  new.func-c.html  new.func.html  new.gcov.html  string_view.func-c.html  string_view.func.html  string_view.gcov.html  tuple.func-c.html  tuple.func.html  tuple.gcov.html
coverage_html/usr/include/c++/13/bits/: alloc_traits.h.func-c.html  alloc_traits.h.func.html  alloc_traits.h.gcov.html  allocated_ptr.h.func-c.html  allocated_ptr.h.func.html  allocated_ptr.h.gcov.html  allocator.h.func-c.html  allocator.h.func.html  allocator.h.gcov.html  atomic_base.h.func-c.html  atomic_base.h.func.html  atomic_base.h.gcov.html  basic_string.h.func-c.html  basic_string.h.func.html  basic_string.h.gcov.html  basic_string.tcc.func-c.html  basic_string.tcc.func.html  basic_string.tcc.gcov.html  char_traits.h.func-c.html  char_traits.h.func.html  char_traits.h.gcov.html  chrono.h.func-c.html  chrono.h.func.html  chrono.h.gcov.html  cpp_type_traits.h.func-c.html  cpp_type_traits.h.func.html  cpp_type_traits.h.gcov.html  functional_hash.h.func-c.html  functional_hash.h.func.html  functional_hash.h.gcov.html  hashtable.h.func-c.html  hashtable.h.func.html  hashtable.h.gcov.html  index.html  (+80 more)
gcov/: Allocator.hpp.gcov  Chunk.hpp.gcov  allocatortest.cpp.gcov  basic_string.h.gcov  char_traits.h.gcov  coverage.info  gtest-assertion-result.h.gcov  stl_iterator_base_funcs.h.gcov  stl_iterator_base_types.h.gcov  tuple.gcov  unique_ptr.h.gcov
include/: Chunk.hpp
src/: Allocator.cpp
(+15 files in other folders)
